Box title - fix wrap.

--- a/src/scss/_components/_common/_box.scss
+++ b/src/scss/_components/_common/_box.scss
@@ -45,6 +45,9 @@
   }
 
   &__title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     color: $c-matterhorn;
     line-height: line-height-convert(22.4, 12);
     font-size: 12px;
